--- a/mystyle.css
+++ b/mystyle.css
@@ -16,5 +16,35 @@
     border: 2px solid #dcdcdc;
     border-radius: 4px;
     padding: 20px 20px;
+    margin: 0px 36px 36px 36px;
     text-align: right;
+}
+
+.previous-display > p {
+    padding: 5px 40px;
+    text-align: right;
+    font-size: 1rem;
+    margin: 0 0;
+}
+
+.calculator-buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 4px;
+}
+
+button {
+    background: #f1f3f4;
+    color: #202124;
+    border: 1px solid #f1f3f4;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+button:hover {
+    background-color: #e1e2e3;
+}
+
+.double-button {
+    grid-column: 3 / span 2;
 }
