--- a/mystyle.css
+++ b/mystyle.css
@@ -18,6 +18,7 @@
     padding: 20px 20px;
     margin: 0px 36px 36px 36px;
     text-align: right;
+    word-wrap: break-word;
 }
 
 .previous-display > p {
@@ -25,6 +26,7 @@
     text-align: right;
     font-size: 1rem;
     margin: 0 0;
+    word-wrap: break-word;
 }
 
 .calculator-buttons {
